feat: Redesign Certifications and Projects UI with new card layouts

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-# SQLite file path
-DB_PATH=contact.db
+# Database URL
+DATABASE_URL=postgresql://user:password@host:port/dbname
 
 # Email SMTP settings (optional but required to deliver mail)
 EMAIL_HOST=smtp.yourprovider.com
