--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# SQLite file path
-DB_PATH=contact.db
+# Database URL
+DATABASE_URL=postgresql://neondb_owner:npg_WvzRnthX3sL5@ep-lively-base-adqyihz3-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
 
 # Email SMTP settings (optional but required to deliver mail)
 EMAIL_HOST=smtp.yourprovider.com
